Closed
Bug 374937
Opened 18 years ago
Closed 18 years ago
Crashes [@ nsTypedSelection::GetFrameSelection]
Categories
(Core :: DOM: Selection, defect)
Core
DOM: Selection
Tracking
()
RESOLVED
FIXED
People
(Reporter: smaug, Assigned: smaug)
Details
Attachments
(1 file)
|
1004 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
According to TB, there are some crashes at nsTypedSelection::GetFrameSelection.
The problem seems to be that mFrameSelection can be nsnull,
so NS_IF_ADDREF should be used.
if(!mFrameSelection) is checked elsewhere in nsTypedSelection.
Attachment #259332 -
Flags: superreview?(roc)
Attachment #259332 -
Flags: review?(roc)
Attachment #259332 -
Flags: superreview?(roc)
Attachment #259332 -
Flags: superreview+
Attachment #259332 -
Flags: review?(roc)
Attachment #259332 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•