Bug 374937, Crashes [@ nsTypedSelection::GetFrameSelection], r+sr=roc